# BeeSense

./: .gitignore  AWS_DEPLOYMENT_GUIDE.md  README.md  test_dashboard.ps1
bee-counting/src/: main.cpp
dashboard/: README.md  index.html  server.js  style.css
data/bumblebees/images/: flip_pictures.py
hardware/3d_print/: natupolexcel_senseboxeye_halterung.stl
hardware/firmware/bumblebee_detection/v2/: README.md
hardware/firmware/bumblebee_detection/v3/: ESP32_SETUP.md  README.md  sdkconfig.defaults
hardware/firmware/bumblebee_detection/v3/main/: CMakeLists.txt  app_main.cpp  (+1 more)
hardware/firmware/bumblebee_detection_v1/: README.md
hardware/firmware/esp32cam/BumblebeeCameraWebServer/: Light+UV.ino  TempHumi.ino  display.ino
hardware/firmware/esp32cam/BumblebeeDetection/: README.md
hardware/firmware/esp32cam/TestBumblebeeModel/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
hardware/firmware/esp32cam/TestBumblebeeModel/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
hardware/firmware/esp32cam/TestBumblebeeModel/main/include/: ClassificationPostProcessor.hpp
hardware/firmware/esp32cam/TestBumblebeeModel/main/src/: ClassificationPostProcessor.cpp  sd_card.cpp
models/: quantize_onnx_model.py  train.py
models/edge-impulse/: README.txt
models/edge-impulse/model-parameters/: model_metadata.h  model_variables.h
models/edge-impulse/tflite-model/: tflite_learn_863537_3.h  tflite_learn_863537_3.tflite
models/quantized_model/: espdet_pico_224_224_bumblebee.espdl  espdet_pico_224_224_bumblebee.json
models/yolov8n/: yolov8_bumblebee.yaml
(+16 files in other folders)
